[package]
name = "ws-mock"
version = "0.2.2"
edition = "2021"
authors = ["Brendan Blanchard"]
description = "A websocket mock server for testing, inspired by Wiremock."
license = "MIT"
repository = "https://github.com/Brendan-Blanchard/ws-mock"
exclude = [".idea", ".gitignore", ".github"]
keywords = ["tokio", "async", "websocket", "mock", "test"]
categories = ["development-tools::testing"]


[dependencies]
futures-util = "0.3.31"
tokio-tungstenite = "0.26.2"
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.140"
tracing = "0.1.41"
