[package]
name = "ws-mock"
version = "0.4.0"
edition = "2024"
authors = ["Brendan Blanchard"]
description = "A websocket mock server for testing, inspired by Wiremock."
license = "MIT"
repository = "https://github.com/Brendan-Blanchard/ws-mock"
exclude = [".idea", ".gitignore", ".github"]
keywords = ["tokio", "async", "websocket", "mock", "test"]
categories = ["development-tools::testing"]


[dependencies]
futures-util = "0.3.31"
tokio-tungstenite = "0.28.0"
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
tracing = "0.1.41"
